[metadata]
name = neutron-ecmp
summary = OpenStack Networking Inspur
description-file = 
	README.rst
author = HU-Zhangfeng
author-email = huzf@inspur.com
home-page = http://git.inspur.com/vpc/neutron-inspur
classifier = 
	Environment :: OpenStack
	Intended Audience :: Information Technology
	Intended Audience :: System Administrators
	License :: OSI Approved :: Apache Software License
	Operating System :: POSIX :: Linux
	Programming Language :: Python
	Programming Language :: Python :: 2
	Programming Language :: Python :: 2.7
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.5

[files]
packages = 
	neutron_ecmp


[global]
setup-hooks = 
	pbr.hooks.setup_hook

[entry_points]
neutron.service_plugins =
	ecmp = neutron_inspur.services.ecmp.ecmp_plugin:EcmpPlugin

neutron.db.alembic_migrations = 
	neutron-ecmp = neutron_ecmp.db.migration:alembic_migrations
oslo.config.opts =
    neutron.ecmp= neutron_ecmp.opts:list_opts

neutron.agent.l3.extensions =
    ecmp = neutron_inspur.agents.ecmp.l3.ecmp_l3_agent:L3withECMP



[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = neutron_ecmp/locale/neutron_inspur.pot

[compile_catalog]
directory = neutron_ecmp/locale
domain = neutron_ecmp

[update_catalog]
domain = neutron_ecmp
output_dir = neutron_ecmp/locale
input_file = neutron_ecmp/locale/neutron_ecmp.pot

[wheel]
universal = 1

[egg_info]
tag_build = 
tag_date = 0


